Implementado o redirect, para a URL original,add contador de acesso ao slug clicado
